--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,11 +8,13 @@
     <div class="main">
       <div class="header__title">
         <div class="header__brand">
+          {% comment %}
           {%- include svg/logo.svg -%}
+          {% endcomment %}
           {%- assign _paths_root = site.paths.root | default: site.data.variables.default.paths.root  -%}
           {%- include snippets/get-nav-url.html path=_paths_root -%}
           {%- if site.title -%}
-            <a title="{%- if site.description -%}{{ site.description }}{%- endif -%}" href="{{ __return }}">{{ site.title }}</a>
+            <a title="{%- if site.description -%}{{ site.description }}{%- endif -%}" href="{{ __return }}">Home</a>
           {%- endif -%}
         </div>
         {%- if site.search.provider -%}
